test/1.4/errors/T_EAPPLY.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;
device test;

template t { }
is t;
port p;

method init() {
    local t x = cast(dev, t);
    /// ERROR EAPPLY
    x = p();
}
